--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
-    ext.kotlin_version = '1.3.50'
-    ext.ktor_version = '1.2.5'
+    ext.kotlin_version = '1.3.71'
+    ext.ktor_version = '1.3.2'
 
     repositories {
         mavenCentral()
@@ -13,6 +13,10 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'application'
+
+configurations.all {
+    resolutionStrategy.force 'org.freemarker:freemarker:2.3.29'
+}
 
 mainClassName = 'me.brendanweinstein.MainKt'
 task stage {
